Add config example

--- a/config/servicenow_example.yml
+++ b/config/servicenow_example.yml
@@ -41,3 +41,9 @@ default_incident:
   # Urgency: Speed at which the business expects the incident to be resolved
   # Common values: 1 (High), 2 (Medium), 3 (Low)
   urgency: "{{.CommonAnnotations.urgency}}"
+  common_fields: {}
+    #u_issue_type: "data_issue"
+    #u_affected_user: "User Name"
+    #business_service: "Service-Name"
+    #u_environment: "prod"
+    #u_source: "SomeSource"
